# Text2Code

./: .gitignore  Dockefile  README.md  manage.py  pyproject.toml  start.sh
accounts/: admin.py  forms.py  models.py  urls.py  views.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_chat_id_alter_message_id.py  0003_alter_chat_id_alter_chat_title_alter_message_id.py  0004_chat_code.py  0005_chat_language.py  0006_chat_suggested_language.py  0007_message_role.py
core/services/: __init__.py  openai.py
static/css/: chat.css  notfound.css  sidebar.css  style.css
static/js/: chat.js  sidebar.js
templates/accounts/: password_reset_done.html  password_reset_form.html  password_reset_subject.txt
templates/core/: base.html  chat.html  home.html  landing_page.html  sidebar.html
text2code/: asgi.py  settings.py  urls.py  wsgi.py
text2code/settings/: base.py  production.py
text2code/static/css/: home.css  landing_page.css  sidebar.css  style.css
text2code/templates/accounts/: chat.html  login.html  logout.html  password_reset_confirm.html  password_reset_email.html  signup.html
text2code/templates/core/: chat.html  page_not_found.html
